# python3-libdatovka

./: README.md  pyproject.toml  setup.cfg
debian/: changelog  control  copyright  python3-datovka.metainfo.xml  rules
src/datovka/: __init__.py  _capi.py  client.py  exceptions.py  models.py
tests/: test_client.py
