[metadata]
name = datovka
version = 0.1.1
description = Pythonic ctypes wrapper around libdatovka for accessing the Czech ISDS Data Box system
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL-3.0-or-later
author = Vítězslav Dvořák
author_email = info@vitexsoftware.cz
url = https://github.com/VitexSoftware/python3-libdatovka
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: POSIX :: Linux
    Topic :: Communications

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
